[gd_scene load_steps=30 format=2]

[ext_resource path="res://Characters/zombi/idle/skeleton-idle_9.png" type="Texture" id=1]
[ext_resource path="res://Characters/zombi/idle/skeleton-idle_12.png" type="Texture" id=2]
[ext_resource path="res://Characters/zombi/idle/skeleton-idle_14.png" type="Texture" id=3]
[ext_resource path="res://Characters/zombi/idle/skeleton-idle_10.png" type="Texture" id=4]
[ext_resource path="res://Characters/zombi/idle/skeleton-idle_6.png" type="Texture" id=5]
[ext_resource path="res://Characters/zombi/idle/skeleton-idle_8.png" type="Texture" id=6]
[ext_resource path="res://Characters/zombi/idle/skeleton-idle_0.png" type="Texture" id=7]
[ext_resource path="res://Characters/zombi/idle/skeleton-idle_5.png" type="Texture" id=8]
[ext_resource path="res://Characters/zombi/idle/skeleton-idle_1.png" type="Texture" id=9]
[ext_resource path="res://Characters/zombi/idle/skeleton-idle_2.png" type="Texture" id=10]
[ext_resource path="res://Characters/zombi/idle/skeleton-idle_4.png" type="Texture" id=11]
[ext_resource path="res://Characters/zombi/idle/skeleton-idle_7.png" type="Texture" id=12]
[ext_resource path="res://Characters/zombi/idle/skeleton-idle_3.png" type="Texture" id=13]
[ext_resource path="res://Characters/zombi/idle/skeleton-idle_11.png" type="Texture" id=14]
[ext_resource path="res://Characters/zombi/idle/skeleton-idle_13.png" type="Texture" id=15]
[ext_resource path="res://Characters/zombi/idle/skeleton-idle_15.png" type="Texture" id=16]
[ext_resource path="res://Characters/zombi/idle/skeleton-idle_16.png" type="Texture" id=17]
[ext_resource path="res://Characters/zombi/zombi.gd" type="Script" id=18]
[ext_resource path="res://Characters/zombi/WanderController.tscn" type="PackedScene" id=19]
[ext_resource path="res://World/Objects/Hitbox.tscn" type="PackedScene" id=20]
[ext_resource path="res://Characters/zombi/Zombie Sound.wav" type="AudioStream" id=21]
[ext_resource path="res://Characters/zombi/PlayerDetectionZone.tscn" type="PackedScene" id=23]
[ext_resource path="res://Characters/zombi/SoftCollision.tscn" type="PackedScene" id=24]
[ext_resource path="res://World/Objects/HurtBox.tscn" type="PackedScene" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 14 ), ExtResource( 2 ), ExtResource( 15 ), ExtResource( 3 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 100.0

[sub_resource type="CircleShape2D" id=3]
radius = 123.386

[sub_resource type="CircleShape2D" id=4]
radius = 1800.0

[sub_resource type="OccluderPolygon2D" id=5]
cull_mode = 1
polygon = PoolVector2Array( -9.77168, 0.588644, -7.48979, 6.24376, -1.51632, 8.06127, 1.23976, 4.439, 2.97215, 0.816723, 0.452305, -2.80555, -4.11491, -5.56163 )

[node name="zombi" type="KinematicBody2D" groups=[
"zombi",
]]
z_index = 2
z_as_relative = false
collision_layer = 2147483650
collision_mask = 2147483651
script = ExtResource( 18 )
FRICTION = 1200
max_speed = 400
health = 3
rotationSmooth = 0.25

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 2
z_as_relative = false
frames = SubResource( 1 )
animation = "idle"
frame = 15

[node name="HurtBox" parent="." instance=ExtResource( 25 )]
visible = false
collision_layer = 2147483650

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -7, 9 )
shape = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 20 )]
visible = false
collision_mask = 1
damage = 10

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -7, 9 )
shape = SubResource( 2 )

[node name="SoftCollision" parent="." instance=ExtResource( 24 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 3 )
disabled = true

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 23 )]
visible = false
monitorable = false
collision_mask = 1

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.415686 )
shape = SubResource( 4 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -7, 9 )
shape = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="WanderController" parent="." instance=ExtResource( 19 )]
wander_range = 2400

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
bus = "SoundEffects"

[node name="AudioHitted" type="AudioStreamPlayer" parent="."]
bus = "SoundEffects"

[node name="ZombiSoundTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Position2D" type="Position2D" parent="."]
visible = false

[node name="LightOccluder2D" type="LightOccluder2D" parent="Position2D"]
occluder = SubResource( 5 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
scale = Vector2( 0.0760488, 0.123189 )
rect = Rect2( 0, 0, 12, 12 )
process_parent = true
physics_process_parent = true

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 1800, 0 )
collision_mask = 4

[node name="PathFindTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="ZombiSoundTimer" to="." method="_on_ZombiSound_timeout"]
[connection signal="timeout" from="PathFindTimer" to="." method="_on_PathFindTimer_timeout"]

[editable path="HurtBox"]

[editable path="Hitbox"]

[editable path="SoftCollision"]

[editable path="PlayerDetectionZone"]
